--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -279,6 +279,10 @@ spec:
                 secretKeyRef:
                   name: "{{ .Values.backend.mailing.secret }}"
                   key: "password"
+            - name: "MAILINGSERVICE__MAIL__SMTPPORT"
+              value: "{{ .Values.backend.mailing.port }}"
+            - name: "MAILINGSERVICE__MAIL__SMTPUSER"
+              value: "{{ .Values.backend.mailing.user }}"
             - name: "NETWORKREGISTRATION__INITIALROLES__0__CLIENTID"
               value: "{{ .Values.backend.clients.registration }}"
             - name: "NETWORKREGISTRATION__INITIALROLES__0__USERROLENAMES__0"
@@ -392,6 +396,21 @@ spec:
                 secretKeyRef:
                   name: "{{ .Values.backend.interfaces.secret }}"
                   key: "onboardingserviceprovider-encryption-key1"
+            - name: "INVITATION__INVITEDUSERINITIALROLES__0__CLIENTID"
+              value: "{{ .Values.backend.clients.registration }}"
+            - name: "INVITATION__INVITEDUSERINITIALROLES__0__USERROLENAMES__0"
+              value: "{{ .Values.backend.administration.invitation.invitedUserInitialRoles.role0 }}"
+            - name: "INVITATION__REGISTRATIONAPPADDRESS"
+              value: "{{ .Values.portalAddress }}{{ .Values.backend.registration.portalRegistrationPath }}"
+            - name: "INVITATION__PASSWORDRESENDADDRESS"
+              value: "{{ .Values.portalAddress }}{{ .Values.backend.portalPasswordResendPath }}"
+            - name: "INVITATION__INITIALLOGINTHEME"
+              value: "{{ .Values.backend.administration.invitation.initialLoginTheme }}"
+            - name: "INVITATION__ENCRYPTIONKEY"
+              valueFrom:
+                secretKeyRef:
+                  name: "{{ .Values.backend.interfaces.secret }}"
+                  key: "mailing-process-encryption-key"
             ports:
             - name: http
               containerPort: {{ .Values.portContainer }}
