--- a/consortia/environments/values-int.yaml
+++ b/consortia/environments/values-int.yaml
@@ -247,6 +247,9 @@ backend:
       encryptionConfigs:
         index0:
           encryptionKey: "<path:portal/int/beta/processes-worker#dimwalletcreation-encryption-key0>"
+    mailingProcess:
+        index0:
+          encryptionKey: "<path:portal/int/beta/processes-worker#mailing-process-encryption-key0>"
 
 postgresql:
   auth:
