--- a/consortia/environments/values-pen.yaml
+++ b/consortia/environments/values-pen.yaml
@@ -248,6 +248,10 @@ backend:
       encryptionConfigs:
         index0:
           encryptionKey: "<path:portal/data/pen/processes-worker#dimwalletcreation-encryption-key0>"
+    mailingProcess:
+      encryptionConfigs:
+        index0:
+          encryptionKey: "<path:portal/data/pen/processes-worker#mailing-process-encryption-key0>"
 
 postgresql:
   auth:
