feat(idp): add config for mail roles
add config to set the correct roles used to send the deactivate and
delete managed idp mail

Refs: CPLP-3329

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -361,6 +361,12 @@ backend:
         headerProviderAlias: "ProviderAlias"
         headerProviderUserId: "ProviderUserId"
         headerProviderUserName: "ProviderUserName"
+      deleteIdpRoles:
+        role0: "Company Admin"
+        role1: "IT Admin"
+      deactivateIdpRoles:
+        role0: "Company Admin"
+        role1: "IT Admin"
     invitation:
       invitedUserInitialRoles:
         role0: "Company Admin"
