--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -224,6 +224,18 @@ spec:
           value: "{{ .Values.backend.administration.identityProviderAdmin.csvSettings.headerUserId }}"
         - name: "IDENTITYPROVIDERADMIN__CSVSETTINGS__SEPARATOR"
           value: "{{ .Values.backend.administration.identityProviderAdmin.csvSettings.separator }}"
+        - name: "IDENTITYPROVIDERADMIN__DELETEIDPROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "IDENTITYPROVIDERADMIN__DELETEIDPROLES__0__USERROLENAMES__0"
+          value: "{{ .Values.backend.administration.identityProviderAdmin.deleteIdpRoles.role0 }}"
+        - name: "IDENTITYPROVIDERADMIN__DELETEIDPROLES__0__USERROLENAMES__1"
+          value: "{{ .Values.backend.administration.identityProviderAdmin.deleteIdpRoles.role1 }}"
+        - name: "IDENTITYPROVIDERADMIN__DEACTIVATEIDPROLES__0__CLIENTID"
+          value: "{{ .Values.backend.clients.portal }}"
+        - name: "IDENTITYPROVIDERADMIN__DEACTIVATEIDPROLES__0__USERROLENAMES__0"
+          value: "{{ .Values.backend.administration.identityProviderAdmin.deactivateIdpRoles.role0 }}"
+        - name: "IDENTITYPROVIDERADMIN__DEACTIVATEIDPROLES__0__USERROLENAMES__1"
+          value: "{{ .Values.backend.administration.identityProviderAdmin.deactivateIdpRoles.role1 }}"
         - name: "INVITATION__INVITEDUSERINITIALROLES__0__CLIENTID"
           value: "{{ .Values.backend.clients.registration }}"
         - name: "INVITATION__INVITEDUSERINITIALROLES__0__USERROLENAMES__0"
