--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -293,7 +293,7 @@ backend:
       status0: "CREATED"
       status1: "ADD_COMPANY_DATA"
       status2: "INVITE_USER"
-      status3: "SELECT_COMPANY_DATA"
+      status3: "SELECT_COMPANY_ROLE"
       status4: "UPLOAD_DOCUMENTS"
       status5: "VERIFY"
     documentTypeIds:
