add applicationDeclineStatusIds to environment

--- a/charts/portal/templates/deployment-backend-registration.yaml
+++ b/charts/portal/templates/deployment-backend-registration.yaml
@@ -162,6 +162,18 @@ spec:
           value: "{{ .Values.backend.registration.applicationStatusIds.status1 }}"
         - name: "REGISTRATION__APPLICATIONSTATUSIDS__2"
           value: "{{ .Values.backend.registration.applicationStatusIds.status2 }}"
+        - name: "REGISTRATION__APPLICATIONDECLINESTATUSIDS__0"
+          value: "{{ .Values.backend.registration.applicationDeclineStatusIds.status0 }}"
+        - name: "REGISTRATION__APPLICATIONDECLINESTATUSIDS__1"
+          value: "{{ .Values.backend.registration.applicationDeclineStatusIds.status1 }}"
+        - name: "REGISTRATION__APPLICATIONDECLINESTATUSIDS__2"
+          value: "{{ .Values.backend.registration.applicationDeclineStatusIds.status2 }}"
+        - name: "REGISTRATION__APPLICATIONDECLINESTATUSIDS__3"
+          value: "{{ .Values.backend.registration.applicationDeclineStatusIds.status3 }}"
+        - name: "REGISTRATION__APPLICATIONDECLINESTATUSIDS__4"
+          value: "{{ .Values.backend.registration.applicationDeclineStatusIds.status4 }}"
+        - name: "REGISTRATION__APPLICATIONDECLINESTATUSIDS__5"
+          value: "{{ .Values.backend.registration.applicationDeclineStatusIds.status5 }}"
         - name: "REGISTRATION__BASEPORTALADDRESS"
           value: "{{ .Values.portalAddress }}{{ .Values.backend.registration.portalRegistrationPath }}"
         - name: "REGISTRATION__PASSWORDRESENDADDRESS"
