chore: add new credential service
add configuration for the new credential service
adjust workflow file
add values for new service for all environments

Refs: CPLP-3398

--- a/consortia/argocd-app-templates/appsetup-stable.yaml
+++ b/consortia/argocd-app-templates/appsetup-stable.yaml
@@ -239,6 +239,9 @@ spec:
                   clientSecret: "<path:portal/data/stable/processes-worker#offerprovider-client-secret>"
                 onboardingServiceProvider:
                   encryptionKey: "<path:portal/data/stable/processes-worker#process-onboardingserviceprovider-encryption-key>"
+              credential:
+                logging:
+                  default: "Debug"
 
             postgresql:
               auth:
