--- a/consortia/environments/values-pen.yaml
+++ b/consortia/environments/values-pen.yaml
@@ -237,6 +237,10 @@ backend:
     onboardingServiceProvider:
       encryptionKey: "<path:portal/data/pen/processes-worker#process-onboardingserviceprovider-encryption-key>"
 
+  credential:
+    logging:
+      default: "Debug"
+
 postgresql:
   auth:
     password: "<path:portal/data/pen/postgres#postgres-password>"
