--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -800,6 +800,27 @@ backend:
       externalRegistrationPath: "/?overlay=consent_osp"
       # -- The logic to decline an application is not yet implemented in the backend - this will currently lead to a 404 page when clicking on the link in the mail
       closeApplicationPath: "/home/decline"
+  credential:
+    name: "portal-credential"
+    image:
+      name: "tractusx/portal-credential-service"
+      credentialtag: 2813346884f0d5b8ac103647ff1971f18e6cc16c
+    # -- We recommend not to specify default resource limits and to leave this as a conscious choice for the user.
+    # If you do want to specify resource limits, uncomment the following lines and adjust them as necessary.
+    resources:
+      requests:
+        cpu: 15m
+        memory: 105M
+      # limits:
+      #   cpu: 45m
+      #   memory: 105M
+    processIdentity:
+      processUserId: d21d2e8a-fe35-483c-b2b8-4100ed7f0953
+    logging:
+      default: "Information"
+    expiry:
+      expiredVcsToDeleteInMonth: 12
+      inactiveVcsToDeleteInWeeks: 12
   clients:
     portal: "Cl2-CX-Portal"
     registration: "Cl1-CX-Registration"
