--- a/consortia/environments/values-rc.yaml
+++ b/consortia/environments/values-rc.yaml
@@ -236,6 +236,10 @@ backend:
     onboardingServiceProvider:
       encryptionKey: "<path:portal/data/dev/processes-worker#process-onboardingserviceprovider-encryption-key>"
 
+  credential:
+    logging:
+      default: "Debug"
+
 postgresql:
   fullnameOverride: "portal-backend-rc-postgresql"
   auth:
