feat(services): add Conformity_Approval_Service to deleteable documents (#142)
Reviewed-By: Phil Schneider <info@philschneider.de>

--- a/charts/portal/templates/deployment-backend-services.yaml
+++ b/charts/portal/templates/deployment-backend-services.yaml
@@ -226,6 +226,8 @@ spec:
           value: "{{ .Values.backend.services.deleteDocumentTypeIds.type0 }}"
         - name: "SERVICES__DELETEDOCUMENTTYPEIDS__1"
           value: "{{ .Values.backend.services.deleteDocumentTypeIds.type1 }}"
+        - name: "SERVICES__DELETEDOCUMENTTYPEIDS__2"
+          value: "{{ .Values.backend.services.deleteDocumentTypeIds.type2 }}"
         - name: "SERVICES__TECHNICALUSERPROFILECLIENT"
           value: "{{ .Values.backend.services.technicalUserProfileClient }}"
         - name: "SERVICES__COMPANYADMINROLES__0__CLIENTID"
