chore: add configuration for decline url
add decline url configuration for the invitation mail

Refs: CPLP-3726

--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -234,6 +234,8 @@ spec:
           value: "{{ .Values.portalAddress }}{{ .Values.backend.portalPasswordResendPath }}"
         - name: "INVITATION__INITIALLOGINTHEME"
           value: "{{ .Values.backend.administration.invitation.initialLoginTheme }}"
+        - name: "INVITATION__CLOSEAPPLICATIONADDRESS"
+          value: "{{ .Values.portalAddress }}{{ .Values.backend.administration.invitation.closeApplicationPath }}"
         - name: "JWTBEAREROPTIONS__METADATAADDRESS"
           value: "{{ .Values.centralidpAddress }}{{ .Values.backend.keycloak.central.jwtBearerOptions.metadataPath }}"
         - name: "JWTBEAREROPTIONS__REQUIREHTTPSMETADATA"
