--- a/charts/portal/templates/cronjob-backend-processes.yaml
+++ b/charts/portal/templates/cronjob-backend-processes.yaml
@@ -251,6 +251,8 @@ spec:
               value: "{{ .Values.backend.mailing.port }}"
             - name: "MAILINGSERVICE__MAIL__SMTPUSER"
               value: "{{ .Values.backend.mailing.user }}"
+            - name: "MAILINGSERVICE__MAIL__SENDEREMAIL"
+              value: "{{ .Values.backend.mailing.senderEmail }}"
             - name: "PROCESSES__LOCKEXPIRYSECONDS"
               value: "{{ .Values.backend.processesworker.processes.lockExpirySeconds }}"
             - name: "PROVISIONING__CENTRALIDENTITYPROVIDER__CONFIG__CLIENTID"
