--- a/consortia/environments/values-beta.yaml
+++ b/consortia/environments/values-beta.yaml
@@ -119,6 +119,7 @@ backend:
     port: "<path:portal/data/mailing#port>"
     user: "<path:portal/data/mailing#user>"
     password: "<path:portal/data/mailing#password>"
+    senderEmail: "Notifications@catena-x.net"
 
   registration:
     logging:
