chore: add configuration for clientId claim
Refs: https://github.com/eclipse-tractusx/portal-backend/issues/457

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -235,6 +235,9 @@ backend:
       authRealm: "master"
       # -- Flag if the api should be used with an leading /auth path
       useAuthTrail: true
+    claims:
+      # -- identifier how to resolve the client_id claim
+      clientId: ""
   mailing:
     # -- Secret containing the passwords for backend.mailing and backend.provisioning.sharedRealm.
     secret: "secret-backend-mailing"
