chore: add configuration for shared keycloak user
to be able to successfully delete a realm a new user was introduced to
the shared idp, since its used by the backend the configuration has been
added

Refs: https://github.com/eclipse-tractusx/portal-backend/issues/451

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -235,6 +235,14 @@ backend:
       authRealm: "master"
       # -- Flag if the api should be used with an leading /auth path
       useAuthTrail: true
+    shareddelete:
+      # -- Provide the delete sharedidp client-id from CX IAM sharedidp.
+      clientId: "shareddelete-client-id"
+      # -- Client-secret for the delete sharedidp client-id. Secret-key 'shareddelete-client-secret'.
+      clientSecret: ""
+      authRealm: "master"
+      # -- Flag if the api should be used with an leading /auth path
+      useAuthTrail: true
   mailing:
     # -- Secret containing the passwords for backend.mailing and backend.provisioning.sharedRealm.
     secret: "secret-backend-mailing"
