--- a/consortia/environments/values-rc.yaml
+++ b/consortia/environments/values-rc.yaml
@@ -113,6 +113,9 @@ backend:
     shared:
       clientId: "<path:portal/data/keycloak#shared-client-id>"
       clientSecret: "<path:portal/data/dev/keycloak#shared-client-secret>"
+    shareddelete:
+      clientId: "<path:portal/data/keycloak#shareddelete-client-id>"
+      clientSecret: "<path:portal/data/dev/keycloak#shareddelete-client-secret>"
 
   mailing:
     host: "<path:portal/data/mailing#host>"
