fix: add portalPassword to postgresportal for helm upgrade

--- a/charts/localdev/values.yaml
+++ b/charts/localdev/values.yaml
@@ -377,6 +377,7 @@ postgresportal:
     password: ""
     replicationPassword: ""
     portalUser: "portal"
+    portalPassword: ""
     provisioningUser: "provisioning"
     provisioningPassword: ""
   architecture: "replication"
