chore: enable readonly filesystem for frontend using nginx as base

--- a/charts/portal/templates/deployment-frontend-registration.yaml
+++ b/charts/portal/templates/deployment-frontend-registration.yaml
@@ -78,6 +78,12 @@ spec:
           failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
         resources:
           {{- toYaml .Values.frontend.registration.resources | nindent 10 }}
+        volumeMounts:
+        - mountPath: /tmp
+          name: tmp
+      volumes:
+      - emptyDir: {}
+        name: tmp
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
