chore(trg-4-07): enable readOnlyRootFilesystem  (#169)
- enable readOnlyRootFilesystem in containers
- mount tmp frontend deployment, required by nginx base image but also by 00-inject-dynamic-env.sh (executed via docker entrypoint) for [portal](https://github.com/eclipse-tractusx/portal-frontend/pull/471) and [registration app](https://github.com/eclipse-tractusx/portal-frontend-registration/pull/110)

--- a/charts/portal/templates/deployment-frontend-portal.yaml
+++ b/charts/portal/templates/deployment-frontend-portal.yaml
@@ -40,6 +40,7 @@ spec:
           capabilities:
             drop:
             - ALL
+          readOnlyRootFilesystem: true
           runAsNonRoot: true
         image: {{ .Values.frontend.portal.image.name }}:{{ .Values.frontend.portal.image.portaltag | default .Chart.AppVersion }}
         imagePullPolicy: "Always"
@@ -83,6 +84,12 @@ spec:
           failureThreshold: {{ .Values.readinessProbe.failureThreshold }}
         resources:
           {{- toYaml .Values.frontend.portal.resources | nindent 10 }}
+        volumeMounts:
+        - mountPath: /tmp
+          name: tmp
+      volumes:
+      - emptyDir: {}
+        name: tmp
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
