chore: update subcharts and init container, bump version

--- a/charts/localdev/Chart.yaml
+++ b/charts/localdev/Chart.yaml
@@ -20,8 +20,8 @@
 apiVersion: v2
 name: localdev-portal-iam
 type: application
-version: 0.2.0
-appVersion: 0.2.0
+version: 0.3.0
+appVersion: 0.3.0
 description: Setup of CX Portal & IAM for local development
 home: https://github.com/eclipse-tractusx/portal-cd
 sources:
@@ -34,15 +34,15 @@ dependencies:
   - condition: portal.enabled
     name: portal
     repository: https://eclipse-tractusx.github.io/charts/dev
-    version: 1.7.0
+    version: 1.8.0-RC4
   - condition: centralidp.enabled
     name: centralidp
     repository: https://eclipse-tractusx.github.io/charts/dev
-    version: 2.0.0
+    version: 2.1.0-RC1
   - condition: sharedidp.enabled
     name: sharedidp
     repository: https://eclipse-tractusx.github.io/charts/dev
-    version: 2.0.0
+    version: 2.1.0-RC1
   - condition: pgadmin4.enabled
     name: pgadmin4
     repository: https://helm.runix.net
