--- a/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
+++ b/charts/portal/templates/cronjob-backend-portal-maintenance.yaml
@@ -38,7 +38,7 @@ spec:
               readOnlyRootFilesystem: true
               runAsNonRoot: true
             image: "{{ .Values.backend.portalmaintenance.image.name }}:{{ .Values.backend.portalmaintenance.image.portalmaintenancetag | default .Chart.AppVersion }}"
-            imagePullPolicy: "Always"
+            imagePullPolicy: "{{ .Values.backend.portalmaintenance.image.pullPolicy }}"
             env:
               - name: DOTNET_ENVIRONMENT
                 value: "{{ .Values.backend.dotnetEnvironment }}"
