--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -91,8 +91,9 @@ frontend:
   portal:
     name: "portal"
     image:
-      name: "tractusx/portal-frontend"
+      name: "docker.io/tractusx/portal-frontend"
       portaltag: a6dc7f1db45fcf031509f03d58aba2375ce93014
+      pullPolicy: "IfNotPresent"
     # -- We recommend not to specify default resource limits and to leave this as a conscious choice for the user.
     # If you do want to specify resource limits, uncomment the following lines and adjust them as necessary.
     resources:
@@ -105,8 +106,9 @@ frontend:
   registration:
     name: "registration"
     image:
-      name: "tractusx/portal-frontend-registration"
+      name: "docker.io/tractusx/portal-frontend-registration"
       registrationtag: 00e5f468df288fe7c56e3122cbb9968fa12edaba
+      pullPolicy: "IfNotPresent"
     # -- We recommend not to specify default resource limits and to leave this as a conscious choice for the user.
     # If you do want to specify resource limits, uncomment the following lines and adjust them as necessary.
     resources:
@@ -119,8 +121,9 @@ frontend:
   assets:
     name: "assets"
     image:
-      name: "tractusx/portal-assets"
+      name: "docker.io/tractusx/portal-assets"
       assetstag: v1.8.0-RC3
+      pullPolicy: "IfNotPresent"
     # -- We recommend not to specify default resource limits and to leave this as a conscious choice for the user.
     # If you do want to specify resource limits, uncomment the following lines and adjust them as necessary.
     resources:
@@ -259,8 +262,9 @@ backend:
   registration:
     name: "registration-service"
     image:
-      name: "tractusx/portal-registration-service"
+      name: "docker.io/tractusx/portal-registration-service"
       registrationservicetag: b93da7fa591c14e4d4c25b68bb780f35ce2a6ba0
+      pullPolicy: "IfNotPresent"
     # -- We recommend not to specify default resource limits and to leave this as a conscious choice for the user.
     # If you do want to specify resource limits, uncomment the following lines and adjust them as necessary.
     resources:
@@ -307,8 +311,9 @@ backend:
   administration:
     name: "administration-service"
     image:
-      name: "tractusx/portal-administration-service"
+      name: "docker.io/tractusx/portal-administration-service"
       administrationservicetag: b93da7fa591c14e4d4c25b68bb780f35ce2a6ba0
+      pullPolicy: "IfNotPresent"
     # -- We recommend not to specify default resource limits and to leave this as a conscious choice for the user.
     # If you do want to specify resource limits, uncomment the following lines and adjust them as necessary.
     resources:
@@ -420,8 +425,9 @@ backend:
   appmarketplace:
     name: "marketplace-app-service"
     image:
-      name: "tractusx/portal-marketplace-app-service"
+      name: "docker.io/tractusx/portal-marketplace-app-service"
       appmarketplaceservicetag: b93da7fa591c14e4d4c25b68bb780f35ce2a6ba0
+      pullPolicy: "IfNotPresent"
     # -- We recommend not to specify default resource limits and to leave this as a conscious choice for the user.
     # If you do want to specify resource limits, uncomment the following lines and adjust them as necessary.
     resources:
@@ -551,8 +557,9 @@ backend:
   portalmigrations:
     name: "portal-migrations"
     image:
-      name: "tractusx/portal-portal-migrations"
+      name: "docker.io/tractusx/portal-portal-migrations"
       portalmigrationstag: b93da7fa591c14e4d4c25b68bb780f35ce2a6ba0
+      pullPolicy: "IfNotPresent"
     # -- We recommend not to specify default resource limits and to leave this as a conscious choice for the user.
     # If you do want to specify resource limits, uncomment the following lines and adjust them as necessary.
     resources:
@@ -574,8 +581,9 @@ backend:
   portalmaintenance:
     name: "portal-maintenance"
     image:
-      name: "tractusx/portal-maintenance-service"
+      name: "docker.io/tractusx/portal-maintenance-service"
       portalmaintenancetag: b93da7fa591c14e4d4c25b68bb780f35ce2a6ba0
+      pullPolicy: "IfNotPresent"
     # -- We recommend not to specify default resource limits and to leave this as a conscious choice for the user.
     # If you do want to specify resource limits, uncomment the following lines and adjust them as necessary.
     resources:
@@ -592,8 +600,9 @@ backend:
   notification:
     name: "notification-service"
     image:
-      name: "tractusx/portal-notification-service"
+      name: "docker.io/tractusx/portal-notification-service"
       notificationservicetag: b93da7fa591c14e4d4c25b68bb780f35ce2a6ba0
+      pullPolicy: "IfNotPresent"
     # -- We recommend not to specify default resource limits and to leave this as a conscious choice for the user.
     # If you do want to specify resource limits, uncomment the following lines and adjust them as necessary.
     resources:
@@ -618,8 +627,9 @@ backend:
   services:
     name: "services-service"
     image:
-      name: "tractusx/portal-services-service"
+      name: "docker.io/tractusx/portal-services-service"
       servicesservicetag: b93da7fa591c14e4d4c25b68bb780f35ce2a6ba0
+      pullPolicy: "IfNotPresent"
     # -- We recommend not to specify default resource limits and to leave this as a conscious choice for the user.
     # If you do want to specify resource limits, uncomment the following lines and adjust them as necessary.
     resources:
@@ -697,8 +707,9 @@ backend:
   provisioningmigrations:
     name: "provisioning-migrations"
     image:
-      name: "tractusx/portal-provisioning-migrations"
+      name: "docker.io/tractusx/portal-provisioning-migrations"
       provisioningmigrationstag: b93da7fa591c14e4d4c25b68bb780f35ce2a6ba0
+      pullPolicy: "IfNotPresent"
     # -- We recommend not to specify default resource limits and to leave this as a conscious choice for the user.
     # If you do want to specify resource limits, uncomment the following lines and adjust them as necessary.
     resources:
@@ -713,8 +724,9 @@ backend:
   processesworker:
     name: "processes-worker"
     image:
-      name: "tractusx/portal-processes-worker"
+      name: "docker.io/tractusx/portal-processes-worker"
       processesworkertag: b93da7fa591c14e4d4c25b68bb780f35ce2a6ba0
+      pullPolicy: "IfNotPresent"
     # -- We recommend not to specify default resource limits and to leave this as a conscious choice for the user.
     # If you do want to specify resource limits, uncomment the following lines and adjust them as necessary.
     resources:
