Secret key for comapnycertificate media type id added in respective files

--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -340,6 +340,8 @@ backend:
         type0: "PDF"
       ssiCertificateMediaTypes:
         type0: "PDF"
+      comapnyCertificateMediaTypes:
+        type0: "PDF"
     connectors:
       validCertificationContentTypes:
         type0: "application/x-pem-file"
