fix(keycloak): add shared client secret config

--- a/charts/portal/templates/secret-backend-keycloak.yaml
+++ b/charts/portal/templates/secret-backend-keycloak.yaml
@@ -39,5 +39,6 @@ stringData:
   # if secret doesn't exist, use provided value from values file or generate a random one
   central-db-password: {{ .Values.backend.keycloak.central.dbConnection.password | default ( randAlphaNum 32 ) | quote }}
   central-client-secret: {{ .Values.backend.keycloak.central.clientSecret | default ( randAlphaNum 32 ) | quote }}
+  shared-client-secret: {{ .Values.backend.keycloak.shared.clientSecret | default ( randAlphaNum 32 ) | quote }}
   shareddelete-client-secret: {{ .Values.backend.keycloak.shareddelete.clientSecret | default ( randAlphaNum 32 ) | quote }}
 {{ end }}
