--- a/charts/portal/templates/deployment-backend-administration.yaml
+++ b/charts/portal/templates/deployment-backend-administration.yaml
@@ -83,6 +83,8 @@ spec:
         - name: "DATABASEACCESS__PORTAL__CONNECTIONSTRING"
           value: "Server={{ .Values.externalDatabase.host }};Database={{ .Values.externalDatabase.database }};Port={{ .Values.externalDatabase.port }};User Id={{ .Values.externalDatabase.portalUser }};Password=$(PORTAL_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};;"
         {{- end }}
+        - name: "MVC_ROUTING_BASEPATH"
+          value: "{{ .Values.backend.administration.basePath }}"
         - name: "DATABASEACCESS__PORTAL__DATABASESCHEMA"
           value: "{{ .Values.backend.dbConnection.schema }}"
         - name: "KEYCLOAK_CENTRAL_PASSWORD"
