--- a/charts/portal/templates/deployment-backend-appmarketplace.yaml
+++ b/charts/portal/templates/deployment-backend-appmarketplace.yaml
@@ -64,6 +64,8 @@ spec:
           value: "Server={{ .Values.postgresql.fullnameOverride }}-primary;Database={{ .Values.postgresql.auth.database }};Port={{ .Values.postgresql.auth.port }};User Id={{ .Values.postgresql.auth.provisioningUser }};Password=$(PROVISIONING_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
         {{- end }}
         {{- if not .Values.postgresql.enabled }}
+        - name: "MVC_ROUTING_BASEPATH"
+          value: "{{ .Values.backend.appmarketplace.basePath }}"
         - name: "PORTAL_PASSWORD"
           valueFrom:
             secretKeyRef:
