--- a/charts/portal/templates/deployment-backend-notification.yaml
+++ b/charts/portal/templates/deployment-backend-notification.yaml
@@ -59,6 +59,8 @@ spec:
           value: "Server={{ .Values.postgresql.fullnameOverride }}-primary;Database={{ .Values.postgresql.auth.database }};Port={{ .Values.postgresql.auth.port }};User Id={{ .Values.postgresql.auth.portalUser }};Password=$(PORTAL_PASSWORD);Ssl Mode={{ .Values.backend.dbConnection.sslMode }};"
         {{- end }}
         {{- if not .Values.postgresql.enabled }}
+        - name: "MVC_ROUTING_BASEPATH"
+          value: "{{ .Values.backend.notification.basePath }}"
         - name: "PORTAL_PASSWORD"
           valueFrom:
             secretKeyRef:
