--- a/charts/portal/values.yaml
+++ b/charts/portal/values.yaml
@@ -284,6 +284,7 @@ backend:
       # limits:
       #   cpu: 45m
       #   memory: 460M
+    basePath: "api/registration"
     logging:
       bpdmLibrary: "Information"
       registrationService: "Information"
@@ -333,6 +334,7 @@ backend:
       # limits:
       #   cpu: 45m
       #   memory: 430M
+    basePath: "api/administration"
     logging:
       businessLogic: "Information"
       sdfactoryLibrary: "Information"
@@ -447,6 +449,7 @@ backend:
       # limits:
       #   cpu: 45m
       #   memory: 500M
+    basePath: "api/apps"
     logging:
       default: "Information"
       offersLibrary: "Information"
@@ -622,6 +625,7 @@ backend:
       # limits:
       #   cpu: 45m
       #   memory: 400M
+    basePath: "api/notification"
     # -- Keycloak Healthcheck to be enabled for startupProbe;
     # once the centralidp Keycloak instance is available, enable healthcheck by uncommenting.
     healthChecks:
@@ -649,6 +653,7 @@ backend:
       # limits:
       #   cpu: 45m
       #   memory: 500M
+    basePath: "api/services"
     logging:
       default: "Information"
       offersLibrary: "Information"
