chore: add labels and namespace if not already set

--- a/charts/portal/templates/configmap-backend-postgres-init.yaml
+++ b/charts/portal/templates/configmap-backend-postgres-init.yaml
@@ -23,6 +23,8 @@ kind: ConfigMap
 metadata:
   name: {{ .Values.postgresql.primary.initdb.scriptsConfigMap }}
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "portal.labels" . | nindent 4 }}
 data:
   01-init-db-user.sh: |
     postgresql_create_portal_user() {
