--- a/charts/portal/templates/job-backend-provisioning-migrations.yaml
+++ b/charts/portal/templates/job-backend-provisioning-migrations.yaml
@@ -21,6 +21,9 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: {{ .Values.backend.provisioningmigrations.name }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "portal.labels" . | nindent 4 }}
   annotations:
     batch.kubernetes.io/job-tracking: "true"
     "helm.sh/hook": post-install,post-upgrade
