--- a/charts/portal/templates/secret-backend-interfaces.yaml
+++ b/charts/portal/templates/secret-backend-interfaces.yaml
@@ -22,6 +22,8 @@ kind: Secret
 metadata:
   name: {{ .Values.backend.interfaces.secret }}
   namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "portal.labels" . | nindent 4 }}
 type: Opaque
 # use lookup function to check if secret exists
 {{- $secret := (lookup "v1" "Secret" .Release.Namespace .Values.backend.interfaces.secret) }}
