--- a/charts/portal/templates/service-backend-services.yaml
+++ b/charts/portal/templates/service-backend-services.yaml
@@ -21,6 +21,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.backend.services.name }}
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "portal.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   ports:
