--- a/charts/portal/templates/configmap-backend-postgres-init.yaml
+++ b/charts/portal/templates/configmap-backend-postgres-init.yaml
@@ -21,7 +21,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Values.postgresql.primary.initdb.scriptsConfigMap }}
+  name: {{ .Release.Name }}-portal-cm-postgres
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "portal.labels" . | nindent 4 }}
